# xbufr

./: .clang-format  .gitignore  CMakeLists.txt  README.md  git_revision
.github/workflows/: build.yml  release_linux.yml  release_macos.yml  release_windows.yml
apps/: CMakeLists.txt
apps/utils/: CMakeLists.txt  dbufr_dump.cpp  dbufr_dump_table.cpp
apps/xbufr/: CMakeLists.txt  Info.plist  create_dmg.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myapplication.cpp  myapplication.h  nodemodel.cpp  nodemodel.h  valuesmodel.cpp  valuesmodel.h  version.h.in  versiondialog.cpp  versiondialog.h  xbufr.qrc  xbufr.rc
apps/xbufr/images/: bufr.icns  xbufr_dmg.icns  xbufr_dmg.xcf
docker/: Dockerfile.alpine
libs/: CMakeLists.txt
libs/dbufr/include/: bufrfile.h  bufrmessage.h  item.h  node.h
libs/dbufr/src/: CMakeLists.txt  bitreader.cpp  bitreader.h  bitutils.h  bufrdecoder.cpp  bufrdecoder.h  bufrfile.cpp  bufrmessage.cpp  bufrutil.cpp  bufrutil.h  descriptor.cpp  descriptor.h  descriptortablea.cpp  descriptortablea.h  descriptortableb.cpp  descriptortableb.h  descriptortabled.cpp  descriptortabled.h  descriptortablef.cpp  descriptortablef.h  fxy.h  load_tables.cpp  run_load_tables.sh  string_utils.h  tablea.cpp  tablea.h  tableb.cpp  tableb.h  tabled.cpp  tabled.h  tablef.cpp  tablef.h
libs/dbufr/tables/: README.txt
libs/dbufr/tables/eccodes/definitions/bufr/tables/0/local/1/254/0/: element.table  sequence.def
libs/dbufr/tables/eccodes/definitions/bufr/tables/0/local/4/98/0/: sequence.def
libs/dbufr/tables/eccodes/definitions/bufr/tables/0/wmo/13/: element.table
libs/dbufr/tables/eccodes/definitions/bufr/tables/0/wmo/14/: element.table
libs/dbufr/tables/eccodes/definitions/bufr/tables/0/wmo/15/: element.table
libs/dbufr/tables/ncep/: bufrtab.TableD_STD_0_13  bufrtab.TableD_STD_0_14  bufrtab.TableD_STD_0_15  bufrtab.TableD_STD_0_16  bufrtab.TableD_STD_0_17  bufrtab.TableD_STD_0_18  bufrtab.TableD_STD_0_19  bufrtab.TableD_STD_0_20  bufrtab.TableD_STD_0_21  bufrtab.TableD_STD_0_35
scripts/: build_qt.sh
